2010-09-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/expr.bench: more simple expr benchmarks

	* tcl/eval.bench (e-cmd-expand): add {*} benchmark

	* runbench.tcl, libbench.tcl: add -autoscale option that ensures
	min and max runtime length independent of iters requested.

	* tcl/read.bench (read-cat): make sure to close /dev/null

2010-09-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/string.bench: add binary string compare benchmarks

2010-09-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* runbench.tcl: require 8.3

2008-06-12  Miguel Sofer <msofer@users.sf.net>

	* tcl/uplevel.bench: oops, bench required 8.5 ... fixed.

2008-06-12  Miguel Sofer <msofer@users.sf.net>

	* tcl/uplevel.bench: new benchmarks to show uplevel compilation
	speedups 

2007-12-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/read.bench: use -buffering full on cat output
	up iters on the benchmarks for slightly better consistency

	* tcl/regexp.bench: add ini file benchmark to highlight RE slowdown
	Add backtrack case and digit matching benchmarks.

	* tcl/string.bench: more glob recursion case benchmarks

2007-11-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* normbench.tcl: Add -output wiki and variable in/out format
	* runbench.tcl:  Add -output wiki format

	* tcl/expr.bench (expr-unbraced-long): add benchmark
	* tcl/list.bench: add list reverse benchmarks
	* tcl/string.bench: add string reverse core benchmark
	* tcl/regexp.bench: limit pre-8.1 REs

2007-11-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/regexp.bench: add more RE tests for core ReToGlob perf

2007-11-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/read.bench: add grep-glob and cat benchmarks.
	Allow changing buffer benchmarks for 8.3+.
	Allow binary translation for 8.0.

2006-11-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/encoding.bench: add result validation checks

	* runbench.tcl (outputData-text-item): centralize item output format

	* tcl/sha1.bench, tcl/md5.bench: return if < Tcl 8.2
